--- a/src/app.postcss
+++ b/src/app.postcss
@@ -24,6 +24,11 @@
     animation: fadeIn 3s forwards;
 }
 
+.fadeInMenu {
+    opacity: 0;
+    animation: fadeIn 0.5s forwards;
+}
+
 .fadeIn1s {
     opacity: 0;
     animation: fadeIn 10s forwards;
